ch_19_unsafe mm rev 2 unsafe fn mutable slices

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
@@ -473,8 +473,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We must call the dangerous function within a separate unsafe block. If we try  \n",
-    "to call dangerous without the unsafe block, we’ll get an error:\n",
+    "#### -- `unsafe` Function MUST be called in `unsafe` code block --\n",
+    "\n",
+    "We must : \n",
+    "\n",
+    "- call the `dangerous` function within a separate `unsafe` block.  \n",
+    "- If we try to call `dangerous without the unsafe` block,  \n",
+    "- we’ll get an error:\n",
     "\n",
     "```sh\n",
     "$ cargo run\n",
@@ -491,13 +496,16 @@
     "error: could not compile `unsafe-example` due to previous error\n",
     "```\n",
     "\n",
-    "With the unsafe block, we’re asserting to Rust that we’ve read the function’s  \n",
-    "documentation, we understand how to use it properly, and we’ve verified that  \n",
-    "we’re fulfilling the contract of the function.\n",
+    "With the `unsafe` block, we’re asserting to Rust that :  \n",
     "\n",
-    "Bodies of unsafe functions are effectively unsafe blocks, so to perform other  \n",
-    "unsafe operations within an unsafe function, we don’t need to add another  \n",
-    "unsafe block."
+    "- we’ve read the function’s documentation,  \n",
+    "- we understand how to use it properly, and  \n",
+    "- we’ve verified that we’re fulfilling the contract of the function.\n",
+    "\n",
+    "Bodies of `unsafe` functions are effectively `unsafe` blocks :  \n",
+    "\n",
+    "- so to perform other `unsafe` operations within an `unsafe` function,  \n",
+    "- we don’t need to add another `unsafe` block."
    ]
   },
   {
@@ -508,9 +516,9 @@
     "\n",
     "Just because a function contains unsafe code doesn’t mean we need to mark the  \n",
     "entire function as unsafe. In fact, wrapping unsafe code in a safe function is  \n",
-    "a common abstraction. As an example, let’s study the split_at_mut function from  \n",
-    "the standard library, which requires some unsafe code. We’ll explore how we  \n",
-    "might implement it. \n",
+    "a common abstraction. As an example, let’s study the `split_at_mut` function  \n",
+    "from the standard library, which requires some `unsafe` code. We’ll explore how  \n",
+    "we might implement it. \n",
     "\n",
     "This safe method is defined on mutable slices:  \n",
     "- it takes one slice and makes it two by splitting the slice at the index given  \n",
@@ -521,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -534,7 +542,7 @@
        "()"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,15 +566,19 @@
    "source": [
     "> Listing 19-4: Using the safe split_at_mut function\n",
     "\n",
+    "#### -- Attempting to implement `split_at_mut` with safe Rust --\n",
+    "\n",
     "We can’t implement this function using only safe Rust. An attempt might look  \n",
     "something like Listing 19-5, which won’t compile. For simplicity, we’ll  \n",
-    "implement split_at_mut as a function rather than a method and only for slices  \n",
-    "of i32 values rather than for a generic type T."
+    "implement :  \n",
+    "\n",
+    "- `split_at_mut` as a function rather than a method \n",
+    "- and only for slices of `i32` values rather than for a generic type `T`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -575,13 +587,21 @@
    "outputs": [
     {
      "ename": "Error",
+     "evalue": "unused variable: `f`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[unused_variables] Error:\u001b[0m unused variable: `f`"
+     ]
+    },
+    {
+     "ename": "Error",
      "evalue": "cannot borrow `*values` as mutable more than once at a time",
      "output_type": "error",
      "traceback": [
       "\u001b[31m[E0499] Error:\u001b[0m cannot borrow `*values` as mutable more than once at a time",
-      "    \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_35:1:1\u001b[38;5;246m]\u001b[0m",
+      "    \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_64:1:1\u001b[38;5;246m]\u001b[0m",
       "    \u001b[38;5;246m│\u001b[0m",
-      " \u001b[38;5;246m 4 │\u001b[0m \u001b[38;5;249mf\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249mp\u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m_\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m_\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249mv\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;68m&\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m[\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249m3\u001b[0m\u001b[38;5;249m2\u001b[0m\u001b[38;5;249m]\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249md\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249mz\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m-\u001b[0m\u001b[38;5;249m>\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m&\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m[\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249m3\u001b[0m\u001b[38;5;249m2\u001b[0m\u001b[38;5;249m]\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m&\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m[\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249m3\u001b[0m\u001b[38;5;249m2\u001b[0m\u001b[38;5;249m]\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m{\u001b[0m",
+      " \u001b[38;5;246m 4 │\u001b[0m \u001b[38;5;249mf\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249mp\u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m_\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m_\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249mv\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;68m&\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m[\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249m3\u001b[0m\u001b[38;5;249m2\u001b[0m\u001b[38;5;249m]\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249md\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249mz\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m-\u001b[0m\u001b[38;5;249m>\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m&\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m[\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249m3\u001b[0m\u001b[38;5;249m2\u001b[0m\u001b[38;5;249m]\u001b[0m\u001b[38;5;249m,\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m&\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m[\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249m3\u001b[0m\u001b[38;5;249m2\u001b[0m\u001b[38;5;249m]\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m{\u001b[0m",
       " \u001b[38;5;246m   ·\u001b[0m                         \u001b[38;5;68m┬\u001b[0m  ",
       " \u001b[38;5;246m   ·\u001b[0m                         \u001b[38;5;68m╰\u001b[0m\u001b[38;5;68m─\u001b[0m\u001b[38;5;68m─\u001b[0m let's call the lifetime of this reference `'1`",
       " \u001b[38;5;246m   ·\u001b[0m ",
@@ -600,7 +620,7 @@
     "/// Takes a slice\n",
     "/// - split at mid\n",
     "/// - returns a tuple of the resulting 2 slices\n",
-    "fn split_at_mut(values: &mut [i32], mid: usize) -> (&mut [i32], &mut [i32]){\n",
+    "fn split_at_mut(values: &mut [i32], mid: usize) -> (&mut [i32], &mut [i32]) {\n",
     "    let len = values.len();\n",
     "\n",
     "    // safety check that `mid` is within our slice bounds\n",
@@ -624,11 +644,17 @@
    "source": [
     "> Listing 19-5: An attempted implementation of split_at_mut using only safe Rust\n",
     "\n",
-    "This function first gets the total length of the slice. Then it asserts that  \n",
-    "the index given as a parameter is within the slice by checking whether it’s  \n",
-    "less than or equal to the length. The assertion means that if we pass an index  \n",
-    "that is greater than the length to split the slice at, the function will panic  \n",
-    "before it attempts to use that index.\n",
+    "This function :  \n",
+    "\n",
+    "- first gets the total length of the slice.  \n",
+    "- Then it asserts that the index given as a parameter is within the slice  \n",
+    "- by checking whether it’s less than or equal to the length.  \n",
+    "\n",
+    "The assertion means that if we pass an index that is greater than the length to  \n",
+    "split the slice at, the function will panic before it attempts to use that  \n",
+    "index.\n",
+    "\n",
+    "#### -- Assertion GUARANTEES that the 2 mutable slices DO NOT OVERLAP --\n",
     "\n",
     "Then we return two mutable slices in a tuple: \n",
     "\n",
@@ -657,22 +683,24 @@
     "error: could not compile `unsafe-example` due to previous error\n",
     "```\n",
     "\n",
+    "#### -- Rust checker ERROR : only ONE mutable borrow ALLOWED --\n",
+    "\n",
     "Rust’s borrow checker can’t understand that we’re borrowing different parts of  \n",
     "the slice; it only knows that we’re borrowing from the same slice twice.  \n",
     "\n",
-    "- Borrowing different parts of a slice is fundamentally okay  \n",
-    "- because the two slices aren’t overlapping,  \n",
-    "- but Rust isn’t smart enough to know this.  \n",
+    "- Borrowing different parts of a slice is **`fundamentally okay`** \n",
+    "- because the two slices **`aren’t overlapping`**,  \n",
+    "- but **`Rust isn’t smart enough to know this`**.  \n",
     "\n",
     "When we know code is okay, but Rust doesn’t, it’s time to reach for unsafe code.\n",
     "\n",
-    "Listing 19-6 shows how to use an unsafe block, a raw pointer, and some calls to  \n",
+    "> Listing 19-6 shows how to use an unsafe block, a raw pointer, and some calls to  \n",
     "unsafe functions to make the implementation of split_at_mut work."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -691,13 +719,14 @@
     "\n",
     "    // get original slice length\n",
     "    let len = value.len();\n",
-    "    // get RAW POINTER to the data in the slice\n",
-    "    // - RAW POINTER allow for MORE CONTROL and LESS SAFETY in Rust\n",
-    "    let ptr = value.as_mut_ptr();\n",
     "\n",
     "    // safety check that mid is within the slice bound\n",
     "    // - if out of bound, PANIC and TERMINATE the program\n",
     "    assert!(mid <= len);\n",
+    "\n",
+    "    // get RAW POINTER to the data in the slice\n",
+    "    // - RAW POINTER allow for MORE CONTROL and LESS SAFETY in Rust\n",
+    "    let ptr = value.as_mut_ptr();\n",
     "\n",
     "    // start an unsafe block\n",
     "    unsafe {\n",
@@ -723,44 +752,76 @@
     "> Listing 19-6: Using unsafe code in the implementation of the split_at_mut  \n",
     "function\n",
     "\n",
-    "Recall from “The Slice Type” section in Chapter 4 that slices are a pointer to  \n",
-    "some data and the length of the slice. We use the len method to get the length  \n",
-    "of a slice and the as_mut_ptr method to access the raw pointer of a slice. In  \n",
-    "this case, because we have a mutable slice to i32 values, as_mut_ptr returns a  \n",
-    "raw pointer with the type *mut i32, which we’ve stored in the variable ptr.\n",
+    "Recall from “The Slice Type” section in Chapter 4 that `slices` are : \n",
     "\n",
-    "We keep the assertion that the mid index is within the slice. Then we get to the  \n",
-    "unsafe code: the slice::from_raw_parts_mut function takes a raw pointer and a  \n",
-    "length, and it creates a slice. We use this function to create a slice that  \n",
-    "starts from ptr and is mid items long. Then we call the add method on ptr with  \n",
-    "mid as an argument to get a raw pointer that starts at mid, and we create a  \n",
-    "slice using that pointer and the remaining number of items after mid as the  \n",
-    "length.\n",
+    "- a `pointer` to some data  \n",
+    "- and the `length` of the slice.  \n",
     "\n",
-    "The function slice::from_raw_parts_mut is unsafe because it takes a raw pointer  \n",
-    "and must trust that this pointer is valid. The add method on raw pointers is  \n",
-    "also unsafe, because it must trust that the offset location is also a valid  \n",
-    "pointer. Therefore, we had to put an unsafe block around our calls to  \n",
-    "slice::from_raw_parts_mut and add so we could call them. By looking at the code  \n",
-    "and by adding the assertion that mid must be less than or equal to len, we can  \n",
-    "tell that all the raw pointers used within the unsafe block will be valid  \n",
-    "pointers to data within the slice. This is an acceptable and appropriate use of  \n",
-    "unsafe.\n",
+    "We use : \n",
     "\n",
-    "Note that we don’t need to mark the resulting split_at_mut function as unsafe,  \n",
-    "and we can call this function from safe Rust. We’ve created a safe abstraction  \n",
-    "to the unsafe code with an implementation of the function that uses unsafe code  \n",
-    "in a safe way, because it creates only valid pointers from the data this  \n",
-    "function has access to.\n",
+    "- the `len` method to get the length of a slice  \n",
+    "- and the `as_mut_ptr` method to access the raw pointer of a slice. \n",
     "\n",
-    "In contrast, the use of slice::from_raw_parts_mut in Listing 19-7 would likely  \n",
+    "In this case, because we have a mutable slice to :  \n",
+    "\n",
+    "- `i32` values, \n",
+    "- `as_mut_ptr` returns  \n",
+    "- a `raw pointer` with the type `*mut i32`, \n",
+    "- which we’ve stored in the variable `ptr`.\n",
+    "\n",
+    "We keep the `assertion` that the `mid index is within the slice`. Then we  \n",
+    "get to the `unsafe` code: \n",
+    "\n",
+    "- the `slice::from_raw_parts_mut` function \n",
+    "- takes a `raw pointer` and a `length`,  \n",
+    "- and it `creates a slice`.  \n",
+    "\n",
+    "We use this function to : \n",
+    "\n",
+    "- create a slice that \n",
+    "- `starts` from `ptr` \n",
+    "- and is `mid` items long. \n",
+    "- Then we call the `add` method on `ptr` with `mid` as an argument  \n",
+    "- to get a `raw pointer`  \n",
+    "- that starts at `mid`,  \n",
+    "- and we create a slice using that pointer and the remaining number of items  \n",
+    "after mid as the `length`.\n",
+    "\n",
+    "The function `slice::from_raw_parts_mut` is `unsafe` because :  \n",
+    "\n",
+    "- it takes a raw pointer  \n",
+    "- and must trust that this pointer is valid.  \n",
+    "\n",
+    "The `add` method on raw pointers is also `unsafe`, because :  \n",
+    "- it must trust that the offset location is also a valid pointer.  \n",
+    "\n",
+    "#### -- Manual code REVIEW and ASSERTION informs that our CODE is valid --\n",
+    "\n",
+    "Therefore, we had to put an unsafe block around our calls to  \n",
+    "`slice::from_raw_parts_mut` and `add` so we could call them. By looking at the  \n",
+    "code and by adding the `assertion` that mid must be less than or equal to len,  \n",
+    "we can tell that : \n",
+    "\n",
+    "- all the raw pointers used within the unsafe block will be valid pointers to  \n",
+    "data within the slice.  \n",
+    "- This is an acceptable and appropriate use of `unsafe`.\n",
+    "\n",
+    "> Note that we don’t need to mark the resulting `split_at_mut` function as  \n",
+    "`unsafe`, and we can call this function from safe Rust. We’ve created a  \n",
+    "`safe abstraction` to the unsafe code with an implementation of the function  \n",
+    "that uses `unsafe` code in a safe way, because it creates only valid pointers  \n",
+    "from the data this function has access to.\n",
+    "\n",
+    "#### -- Contrast with UNSAFE code that is INSUFFICIENTLY bounded --\n",
+    "\n",
+    "In contrast, the use of `slice::from_raw_parts_mut` in Listing 19-7 would likely  \n",
     "crash when the slice is used. This code takes an arbitrary memory location and  \n",
     "creates a slice 10,000 items long."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -782,16 +843,16 @@
       "Segmentation fault.\n",
       "   0: backtrace::capture::Backtrace::new\n",
       "   1: evcxr::runtime::Runtime::install_crash_handlers::segfault_handler\n",
+      "   2: __platform_memmove\n",
       "   3: core::fmt::builders::DebugInner::entry\n",
       "   4: core::fmt::builders::DebugInner::entry\n",
       "   5: core::fmt::builders::DebugList::entry\n",
       "   6: <&T as core::fmt::Debug>::fmt\n",
       "   7: core::fmt::write\n",
-      "   2: __platform_memmove\n",
       "   8: <&std::io::stdio::Stdout as std::io::Write>::write_fmt\n",
-      "  10: std::panicking::try\n",
       "   9: std::io::stdio::_print\n",
-      "  11: _run_user_code_6\n",
+      "  10: <core::panic::unwind_safe::AssertUnwindSafe<F> as core::ops::function::FnOnce<()>>::call_once\n",
+      "  11: _run_user_code_48\n",
       "  12: evcxr::runtime::Runtime::run_loop\n",
       "  13: evcxr::runtime::runtime_hook\n",
       "  14: evcxr_jupyter::main\n",
@@ -844,6 +905,8 @@
    "metadata": {},
    "source": [
     "> Listing 19-7: Creating a slice from an arbitrary memory location\n",
+    "\n",
+    "#### -- because WE DO NOT own MEMORY at this LOCATION --\n",
     "\n",
     "We don’t own the memory at this arbitrary location, and there is no guarantee  \n",
     "that the slice this code creates contains valid i32 values. Attempting to use  \n",
