ch_19_adv_features : rev 7 refeed extern FFI

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
@@ -920,16 +920,24 @@
     "### Using `extern` Functions to Call External Code\n",
     "\n",
     "Sometimes, your Rust code might need to interact with code written in another  \n",
-    "language. For this, Rust has the keyword extern that facilitates the creation  \n",
-    "and use of a Foreign Function Interface (FFI). An FFI is a way for a programming  \n",
-    "language to define functions and enable a different (foreign) programming  \n",
-    "language to call those functions.\n",
+    "language. For this, Rust has :  \n",
     "\n",
-    "Listing 19-8 demonstrates how to set up an integration with the abs function  \n",
-    "from the C standard library. Functions declared within extern blocks are always  \n",
-    "unsafe to call from Rust code. The reason is that other languages don’t enforce  \n",
-    "Rust’s rules and guarantees, and Rust can’t check them, so responsibility falls  \n",
-    "on the programmer to ensure safety.\n",
+    "- the keyword **`extern`** \n",
+    "- that facilitates the creation and use of a Foreign Function Interface (FFI). \n",
+    "\n",
+    "An FFI is a way for a programming language to define functions and enable a  \n",
+    "different (foreign) programming language to call those functions.\n",
+    "\n",
+    "Listing 19-8 demonstrates how to :  \n",
+    "\n",
+    "- set up an integration with the `abs` function from the `C` standard library. \n",
+    "\n",
+    "<iframe src=\"https://giphy.com/embed/LlhKIWfRs2FPO\" width=\"480\" height=\"414\" frameBorder=\"0\" class=\"giphy-embed\" allowFullScreen></iframe><p><a href=\"https://giphy.com/gifs/isis-mh17-casebook-LlhKIWfRs2FPO\">via GIPHY</a></p>\n",
+    "\n",
+    "Functions declared within `extern` blocks are always `unsafe` to call from Rust  \n",
+    "code. The reason is that other languages don’t enforce Rust’s rules and  \n",
+    "guarantees, and **`Rust can’t check them`**, so responsibility falls on the  \n",
+    "programmer to ensure safety.\n",
     "\n",
     "> Filename: src/main.rs"
    ]
@@ -986,11 +994,50 @@
     "> Listing 19-8: Declaring and calling an extern function defined in another  \n",
     "language\n",
     "\n",
-    "Within the extern \"C\" block, we list the names and signatures of external  \n",
-    "functions from another language we want to call. The \"C\" part defines which  \n",
-    "application binary interface (ABI) the external function uses: the ABI defines  \n",
-    "how to call the function at the assembly level. The \"C\" ABI is the most common  \n",
-    "and follows the C programming language’s ABI."
+    "#### -- extern => ABI (Application Binary Interface) --\n",
+    "\n",
+    "Within the `extern` \"C\" block :  \n",
+    "\n",
+    "- we list the `names` and `signatures`  \n",
+    "- of `external functions` from another language we want to call.  \n",
+    "- The \"C\" part defines which application binary interface (ABI) the external  \n",
+    "function uses:  \n",
+    "- the ABI defines how to call the function at the assembly level.  \n",
+    "\n",
+    "The \"C\" ABI is the most common and follows the C programming language’s ABI."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### -- GPT Asks --\n",
+    "***\n",
+    "\n",
+    "Imagine you and your friend have two different sets of building blocks. You  \n",
+    "have colorful LEGO blocks, and your friend has wooden blocks. You both love  \n",
+    "building cool structures, but the problem is that your LEGO blocks and your  \n",
+    "friend's wooden blocks don't fit together directly.\n",
+    "\n",
+    "So, what do you do? You decide to create a special set of rules that tells you  \n",
+    "how to connect LEGO blocks and wooden blocks. These rules might include using  \n",
+    "special connectors or arranging the blocks in a certain way. This set of rules  \n",
+    "is like the Application Binary Interface (ABI).\n",
+    "\n",
+    "Now, let's look at the \"C\" part. Suppose your friend who has wooden blocks  \n",
+    "speaks a different language, say French, and you speak English. To communicate  \n",
+    "how to connect the blocks, you both decide to use a common language, say  \n",
+    "Spanish. In this case, Spanish is like the \"C\" ABI. It's a common way that  \n",
+    "different parts of a computer program (which might be written in different  \n",
+    "programming languages) can talk to each other.\n",
+    "\n",
+    "So, in your code, when you're writing an `extern \"C\"` block, you're writing the  \n",
+    "rules in Spanish (the common language) to explain how to connect your LEGO  \n",
+    "blocks (your program) with your friend's wooden blocks (the external functions  \n",
+    "from another language). The names and signatures of the external functions are  \n",
+    "like the descriptions of which blocks to use and how to connect them.\n",
+    "\n",
+    "I hope this makes the concept of ABI and `extern \"C\"` a bit clearer!"
    ]
   },
   {
@@ -999,19 +1046,37 @@
    "source": [
     "#### -- Calling Rust Functions from Other Languages --\n",
     "\n",
-    "We can also use extern to create an interface that allows other languages to  \n",
-    "call Rust functions. Instead of creating a whole extern block, we add the  \n",
-    "extern keyword and specify the ABI to use just before the fn keyword for the  \n",
-    "relevant function. We also need to add a #[no_mangle] annotation to tell the  \n",
-    "Rust compiler not to mangle the name of this function. Mangling is when a  \n",
-    "compiler changes the name we’ve given a function to a different name that  \n",
-    "contains more information for other parts of the compilation process to consume  \n",
-    "but is less human readable. Every programming language compiler mangles names  \n",
-    "slightly differently, so for a Rust function to be nameable by other languages,  \n",
-    "we must disable the Rust compiler’s name mangling.\n",
+    "We can also use `extern` to create an interface that :  \n",
     "\n",
-    "In the following example, we make the call_from_c function accessible from C  \n",
-    "code, after it’s compiled to a shared library and linked from C:\n",
+    "- allows **other** languages **to call Rust** functions.  \n",
+    "\n",
+    "Instead of creating a whole `extern` block : \n",
+    "\n",
+    "- we add the `extern` keyword  \n",
+    "- and `specify the ABI` to use \n",
+    "- just before the `fn` keyword for the relevant function.  \n",
+    "\n",
+    "#### -- **`#[no_mangle]`** for Rust funcs that allow ffi access --\n",
+    "\n",
+    "<iframe src=\"https://giphy.com/embed/lrK5A69PGsflFQiPmM\" width=\"480\" height=\"270\" frameBorder=\"0\" class=\"giphy-embed\" allowFullScreen></iframe><p><a href=\"https://giphy.com/gifs/animation-2d-2danimation-lrK5A69PGsflFQiPmM\">via GIPHY</a></p>\n",
+    "\n",
+    "We also need to add a **`#[no_mangle]`** annotation to tell the Rust compiler  \n",
+    "not to `mangle the name` of this function. Mangling is when a compiler changes  \n",
+    "the name we’ve given a function to a different name that contains more  \n",
+    "information for other parts of the compilation process to consume but is less  \n",
+    "human readable. Every programming language compiler mangles names slightly  \n",
+    "differently :  \n",
+    "\n",
+    "- so for a Rust function to be nameable by other languages,  \n",
+    "- we must disable the Rust compiler’s name mangling.\n",
+    "\n",
+    "#### -- Then compile to SHARED LIBRARY and LINK from C --\n",
+    "\n",
+    "In the following example, we make the `call_from_c` function accessible from  \n",
+    "`C` code, after it’s :  \n",
+    "\n",
+    "- compiled to a shared library  \n",
+    "- and linked from C:\n",
     "\n",
     "```rust\n",
     "#[no_mangle]\n",
@@ -1025,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1046,12 +1111,15 @@
    "source": [
     "### Accessing or Modifying a Mutable Static Variable\n",
     "\n",
-    "In this book, we’ve not yet talked about global variables, which Rust does  \n",
-    "support but can be problematic with Rust’s ownership rules. If two threads are  \n",
-    "accessing the same mutable global variable, it can cause a data race.\n",
+    "In this book, we’ve not yet talked about `global variables`, which Rust does  \n",
+    "support but can be problematic with Rust’s ownership rules.  \n",
     "\n",
-    "In Rust, global variables are called static variables. Listing 19-9 shows an  \n",
-    "example declaration and use of a static variable with a string slice as a value.\n",
+    "- If `two threads` are accessing the `same mutable global` variable,  \n",
+    "- it can cause a `data race`\n",
+    "\n",
+    "In Rust, `global` variables are called `static` variables. Listing 19-9 shows  \n",
+    "an example declaration and use of a `static` variable with a `string slice` as  \n",
+    "a `value`.\n",
     "\n",
     "> Filename: src/main.rs"
    ]
@@ -1097,29 +1165,46 @@
    "source": [
     "> Listing 19-9: Defining and using an immutable static variable\n",
     "\n",
-    "Static variables are similar to constants, which we discussed in the  \n",
-    "“Differences Between Variables and Constants” section in Chapter 3. The names  \n",
-    "of static variables are in SCREAMING_SNAKE_CASE by convention. Static variables  \n",
-    "can only store references with the 'static lifetime, which means the Rust  \n",
-    "compiler can figure out the lifetime and we aren’t required to annotate it  \n",
-    "explicitly. Accessing an immutable static variable is safe.\n",
+    "#### -- Similarities between `static` and `constants`\n",
     "\n",
-    "A subtle difference between constants and immutable static variables is that :  \n",
-    "- values in a static variable have a fixed address in memory.  \n",
+    "<iframe src=\"https://giphy.com/embed/3orif1k94sLl0lFCQ8\" width=\"480\" height=\"362\" frameBorder=\"0\" class=\"giphy-embed\" allowFullScreen></iframe><p><a href=\"https://giphy.com/gifs/season-17-the-simpsons-17x10-3orif1k94sLl0lFCQ8\">via GIPHY</a></p>\n",
+    "\n",
+    "`Static` variables are similar to `constants`, which we discussed in the  \n",
+    "“Differences Between Variables and Constants” section in Chapter 3.  \n",
+    "\n",
+    "- The names of static variables are in SCREAMING_SNAKE_CASE by convention.  \n",
+    "- Static variables can only store references with the 'static lifetime,  \n",
+    "- which means the Rust compiler can figure out the lifetime  \n",
+    "- and we aren’t required to annotate it explicitly.  \n",
+    "\n",
+    "Accessing an `immutable static` variable is `safe`.\n",
+    "\n",
+    "#### -- Differences between `static` and `constants`\n",
+    "\n",
+    "A subtle difference between `constants` and `immutable static` variables is  \n",
+    "that :  \n",
+    "\n",
+    "- values in a `static` variable have a `fixed address` in memory.  \n",
     "- Using the value will always access the same data. \n",
-    "- Constants, on the other hand, are allowed to duplicate their data whenever  \n",
-    "they’re used.  \n",
-    "- Another difference is that static variables can be mutable.  \n",
+    "- `Constants`, on the other hand, are `allowed to duplicate` their data  \n",
+    "whenever they’re used.  \n",
+    "- Another difference is that `static` variables can be `mutable`.  \n",
     "\n",
-    "Accessing and modifying mutable static variables is unsafe. Listing 19-10 shows  \n",
-    "how to declare, access, and modify a mutable static variable named COUNTER.\n",
+    "#### -- Mutable Static Variables are UNSAFE\n",
+    "\n",
+    "Accessing and modifying `mutable static variables is unsafe`.  \n",
+    "Listing 19-10 shows how to :  \n",
+    "\n",
+    "- declare,  \n",
+    "- access, and  \n",
+    "- modify a `mutable static` variable named `COUNTER`.\n",
     "\n",
     "> Filename: src/main.rs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1139,15 +1224,18 @@
        "()"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "// As with regular variables, we specify mutability using the `mut` keyword\n",
     "static mut COUNTER: u32 = 0;\n",
     "\n",
     "fn add_to_count(inc: u32) {\n",
+    "    // MODIFYING a static mutable variable is UNSAFE\n",
+    "    // - and requires an `unsafe` block\n",
     "    unsafe {\n",
     "        COUNTER += inc;\n",
     "    }\n",
@@ -1156,6 +1244,8 @@
     "{\n",
     "    add_to_count(3);\n",
     "\n",
+    "    // Even ACCESSING a static mutable variable is UNSAFE\n",
+    "    // - and requires an `unsafe` block\n",
     "    unsafe {\n",
     "        println!(\"COUNTER : {}\", COUNTER);\n",
     "    }\n",
@@ -1168,20 +1258,30 @@
    "source": [
     "> Listing 19-10: Reading from or writing to a mutable static variable is unsafe\n",
     "\n",
-    "As with regular variables, we specify mutability using the mut keyword. Any  \n",
+    "As with regular variables, we specify mutability using the `mut` keyword. Any  \n",
     "code that :  \n",
-    "- reads or writes from COUNTER \n",
-    "- must be within an unsafe block.  \n",
     "\n",
-    "This code compiles and prints COUNTER: 3 as we would expect because it’s single  \n",
-    "threaded. Having multiple threads access COUNTER would likely result in data  \n",
-    "races.\n",
+    "- reads or writes from `COUNTER` \n",
+    "- must be within an `unsafe block`.  \n",
     "\n",
-    "With mutable data that is globally accessible, it’s difficult to ensure there  \n",
-    "are no data races, which is why Rust considers mutable static variables to be  \n",
-    "unsafe. Where possible, it’s preferable to use the concurrency techniques and  \n",
-    "thread-safe smart pointers we discussed in Chapter 16 so the compiler checks  \n",
-    "that data accessed from different threads is done safely."
+    "This code compiles and prints `COUNTER: 3` as we would expect because it’s  \n",
+    "single threaded. Having `multiple threads` access `COUNTER` would likely  \n",
+    "result in `data races`.\n",
+    "\n",
+    "#### -- Mutable Static are @HIGH RISK For Data RACES --\n",
+    "\n",
+    "With `mutable data` that is `globally accessible`, it’s :  \n",
+    "- difficult to ensure there are no data races,  \n",
+    "- which is why Rust considers `mutable static` variables to be unsafe.  \n",
+    "\n",
+    "#### -- Instead use CONCURRENCY and thread-safe SMART POINTERS --\n",
+    "\n",
+    "Where possible, it’s preferable to : \n",
+    "\n",
+    "- use the concurrency techniques  \n",
+    "- and thread-safe smart pointers we discussed in Chapter 16  \n",
+    "- so the compiler checks that data accessed from different threads is done  \n",
+    "safely."
    ]
   },
   {
